--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@
 
 .generate-pdd{
   background-color: #282c34!important;
-  width: 100%!important;
+  width: 50%!important;
   height: 40px!important;
   font-size: 18px!important;
 
@@ -93,6 +93,7 @@
 .save-section {
   margin-top: 10px;
   width: 300px;
+  font-size: 20px!important;
 }
 .save-section button{
   background-color: darkcyan;
